== History

jeckyl-0.1.1 26-Apr-2011

Added ConfigRoot as the default root for config files

jeckyl-0.1.0 18-Apr-2011

Changed structure to module-based due to superclass mismatch errors. This version of
Jeckyl is not backward compatible.

jeckyl-0.0.4 14-Apr-2011

Minor Update to fix a superclass error caused by requiring version before the first
declaration of the Jeckyl class.

jeckyl-0.0.3a 11-Apr-2011

Another slight change