@@ -1,5 +1,9 @@
 == History
 
+jeckyl-0.1.2 23-June-2011
+
+Update to check that defaults meet specified rules properly, and handle strings and symbols when generating files
+
 jeckyl-0.1.1 26-Apr-2011
 
 Added ConfigRoot as the default root for config files
